--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <a class="navbar-brand" href="#">
-          <img class="rounded-circle img-fluid" src="img/logo.svg" alt="Imagen logo" width="45px" >
+          <img class="rounded-circle img-fluid" src="img\logo.svg" alt="Imagen logo" width="45px" >
         </a>
         <ul class="navbar-nav d-flex justify-content-center align-items-center">
           <li class="nav-item">
