--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!--SECCTION HERO-->
   <section class="hero align-items-stretch">
     <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-      <img class="hero-imagen-desarrolladador rounded-circle" src="/img/mifoto.jpg" alt="Mi foto-Jhunior Avila">
+      <img class="hero-imagen-desarrolladador rounded-circle" src="\img\mifoto.jpg" alt="Mi foto-Jhunior Avila">
       <h1>
         Hola, soy Jhunior Avila Quintero
       </h1>
@@ -288,7 +288,7 @@
   </section>
   <!--Pie de página-->
   <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center" >
-    <img class="footer-logo" src="/img/logo.svg" alt="">
+    <img class="footer-logo" src="\img\logo.svg" alt="">
     <p class="footer-texto text-center">Aprendiendo cosa nuebas cada día<br>Crezcamos juntos</p>
     <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
       <a href="https://www.linkedin.com/in/jhunior-avila-3a242b24a" target="_blank">
