--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="container">
-            <img class="testimonio-imagen " src="/img/mi_primera_investigacion.jpg"  alt="...">
+            <img class="testimonio-imagen " src="img\mi_primera_investigacion.jpg"  alt="...">
             <div class="testimino-info">
               <p class="cliente">¿Cómo formular mi primer proyecto de investigación y publicar un artículo científico de los resultados?</p>
             </div>
@@ -229,7 +229,7 @@
         <div class="carousel-item">
           <div class="container">
             <div class="container">
-              <img class="testimonio-imagen " src="/img/desafio_del_ing_industrial.jpg"  alt="...">
+              <img class="testimonio-imagen " src="img\desafio_del_ing_industrial.jpg"  alt="...">
               <div class="testimino-info">
                 <p class="cliente">Eureka industrial: Los desafíos del ingeniero industrial en la Industria</p>
               </div>
@@ -238,7 +238,7 @@
         </div>
         <div class="carousel-item">
           <div class="container">
-            <img class="testimonio-imagen " src="/img/peruanidad.jpg"  alt="...">
+            <img class="testimonio-imagen " src="img\peruanidad.jpg"  alt="...">
             <div class="testimino-info">
               <p class="cliente">I Congreso de Peruanidad ¿Qué nos une como peruanos?</p>
             </div>
@@ -247,7 +247,7 @@
         <div class="carousel-item">
           <div class="container">
             <div class="container">
-              <img class="testimonio-imagen " src="/img/mente_cerebro.jpg"  alt="...">
+              <img class="testimonio-imagen " src="img\mente_cerebro.jpg"  alt="...">
               <div class="testimino-info">
                 <p class="cliente">Reflexiones en torno al problema mente-cerebro y persona-naturaleza</p>
               </div>
