--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </h2>
     </div>
     <div class="hero-inferior">
-      <img class="hero-inferior-imagen img-fluid" src="/img/tecnologia-hero.svg" alt="Monitor, laptop y logos">
+      <img class="hero-inferior-imagen img-fluid" src="img\tecnologia-hero.svg" alt="Monitor, laptop y logos">
 
     </div>
 
