--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="columna col-12 col-md-4">
           <i class="bi bi-pc-display"></i>
           <p class="experiencia-titulo">Uso de PC</p>
-          <p>Una herramienta indispensable hoy en día para desempeñarse en ambito academico o laboral en el uso de un computador. </p>
+          <p>Una herramienta indispensable hoy en día para desempeñarse en el ámbito academico o laboral es el uso de un computador. </p>
           <div class="badges-contenedor">
             <span class="badge text-bg-primary">Archivos</span>
             <span class="badge text-bg-primary">Escritorios</span>
