--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="nav-link active" href="#mis-conocimientos">Mis conocimientos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#conferencias">Conferencias</a>
+            <a class="nav-link active" href="#conferencias">Certificados</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="#mi-contacto">Contacto</a>
@@ -87,8 +87,8 @@
   <section id="sobre-mi" class="sobre-mi seccion-oscura">
     <div class="contenedor">
       <h2 class="seccion-titulo texto-blanco">Conoce a Jhunior Avila</h2>
-      <p class="seccion-texto">Estoy cursando el tercer año de la carrera Ing. Industrial en la Universidad Católica San Pablo, desde que inicié mis estudios he podido adquirir conocimientos en diversas áreas de estudio y gracias a diversas charlas y talleres estoy mejorando mis hablidades blandas.<br>
-      Mis intereses académicos en áreas de mi carrea son operaciones, logística y la investigación. Entre mis pasatiempos se encuentran la tecnología y literatura. Además, para el perido academíco 2023 desarrollaré actividades como representante de egresados del Colegio de Alto Rendimiento de Piura.
+      <p class="seccion-texto">Estoy cursando el septimo ciclo de la carrera Ing. Industrial en la Universidad Católica San Pablo, desde que inicié mis estudios he podido adquirir conocimientos en diversas áreas de estudio y gracias a diversas charlas y talleres estoy mejorando mis hablidades blandas.<br>
+      Mis intereses académicos en áreas de mi carrea son operaciones y logística, tecnología y la investigación.
       </p>
     </div>
   </section>
@@ -101,14 +101,14 @@
         <div class="columna col-12 col-md-4">
           <i class="bi bi-file-earmark-spreadsheet-fill"></i>
           <p class="experiencia-titulo">Microsoft Office</p>
-          <p>Tengo dominio en nivel intermedio de las principales aplicaciones de ofimática.</p>
+          <p>Tengo dominio en nivel acvanzado de las principales aplicaciones de ofimática.</p>
           <div class="badges-contenedor">
-            <span class="badge text-bg-primary">Excel</span>
-            <span class="badge text-bg-primary">Word</span>
-            <span class="badge text-bg-primary">Power Point</span>
+            <span class="badge text-bg-primary">Excel Avanzado</span>
+            <span class="badge text-bg-primary">Word Avanzado</span>
+            <span class="badge text-bg-primary">Power Point (Intermedio) </span>
           </div>
         </div>
-        <!--Artiiculos-->
+        <!--Articulos-->
         <div class="columna col-12 col-md-4">
           <i class="bi bi-pc-display"></i>
           <p class="experiencia-titulo">Uso de PC</p>
@@ -122,12 +122,12 @@
         <div class="columna col-12 col-md-4">
           <i class="bi bi-laptop "></i>
           <p class="experiencia-titulo">Tecnología</p>
-          <p>Tengo conocimientos básicos en tecnologías y sus herramientas para ser parte de la internet y usar datos para su tratamiento y anális; estos conomientos son ncesarios para ser competente en el mundo actual.</p>
+          <p>Tengo conocimientos básicos en tecnologías y sus herramientas para ser parte de la internet y usar datos para su tratamiento y anális.</p>
           <div class="badges-contenedor">
             <span class="badge text-bg-primary">Bootstrap</span>
             <span class="badge text-bg-primary">Python</span>
             <span class="badge text-bg-primary">MySql</span>
-            <span class="badge text-bg-primary">RStudio</span>
+          
           </div>
         </div>
       </div>
@@ -210,10 +210,10 @@
   </section>
 -->
 
-  <!--Conferencias-->
+  <!--Certificados-->
   <section id="conferencias" class="testimonios seccion-clara">
-    <h2 class="seccion-titulo">Conferencias</h2>
-    <h3 class="seccion-descripcion">Durante mi ultimo ciclo de estudios he asistido a diversas conferencias</h3>
+    <h2 class="seccion-titulo">Certificados</h2>
+    <h3 class="seccion-descripcion">Durante mi ultimo ciclo de estudios he asistido a diversas cursos</h3>
     <!--Carrusel-->
     <div id="testimonios-carrusel" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -298,7 +298,7 @@
         <i class="bi bi-envelope-at-fill"></i>
       </a>
     </div>
-    <div class="derechos-de-autor">Creado por Jhunior Avila Quintero (2023) &#169;</div>
+    <div class="derechos-de-autor">Jhunior Avila Quintero (2023) &#169;</div>
 
   </footer>
 
