--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     <div class="contenedor">
       <h2 class="seccion-titulo texto-blanco">Conoce a Jhunior Avila</h2>
       <p class="seccion-texto">Estoy cursando el septimo ciclo de la carrera Ing. Industrial en la Universidad Católica San Pablo, desde que inicié mis estudios he podido adquirir conocimientos en diversas áreas de estudio y gracias a diversas charlas y talleres estoy mejorando mis hablidades blandas.<br>
-      Mis intereses académicos en áreas de mi carrea son operaciones y logística, tecnología y la investigación.
+      Mis intereses académicos en áreas de mi carrea son operaciones y logística, tecnología y la investigación.<br> 
+        Como línea de carrera tengo interés en el área de Logística porque considero que brinda la ventaja competitiva que una empresa necesita para crecer y mantener sus estándares de servicio al nivel que el cliente exige.
       </p>
     </div>
   </section>
