--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="container">
-            <img class="testimonio-imagen " src="img\mi_primera_investigacion.jpg"  alt="...">
+            <img class="testimonio-imagen " src="img\power_bi.jpg"  alt="...">
             <div class="testimino-info">
-              <p class="cliente">¿Cómo formular mi primer proyecto de investigación y publicar un artículo científico de los resultados?</p>
+              <p class="cliente">Certificado Power BI - Skill</p>
             </div>
           </div>
           
