--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!--SECCTION HERO-->
   <section class="hero align-items-stretch">
     <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-      <img class="hero-imagen-desarrolladador rounded-circle" src="img\mifoto.jpg" alt="Mi foto-Jhunior Avila">
+      <img class="hero-imagen-desarrolladador rounded-circle" src="img\foto.jpg" alt="Mi foto-Jhunior Avila">
       <h1>
         Hola, soy Jhunior Avila Quintero
       </h1>
@@ -230,27 +230,27 @@
         <div class="carousel-item">
           <div class="container">
             <div class="container">
-              <img class="testimonio-imagen " src="img\desafio_del_ing_industrial.jpg"  alt="...">
+              <img class="testimonio-imagen " src="img\excel.jpg"  alt="...">
               <div class="testimino-info">
-                <p class="cliente">Eureka industrial: Los desafíos del ingeniero industrial en la Industria</p>
+                <p class="cliente">Microsoft Excel Avanzado - Instituto de informática de la UNSA</p>
               </div>
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="container">
-            <img class="testimonio-imagen " src="img\peruanidad.jpg"  alt="...">
+            <img class="testimonio-imagen " src="img\word.jpg"  alt="...">
             <div class="testimino-info">
-              <p class="cliente">I Congreso de Peruanidad ¿Qué nos une como peruanos?</p>
+              <p class="cliente">Microsoft Word Avanzado - Instituto de informática de la UNSA</p>
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="container">
             <div class="container">
-              <img class="testimonio-imagen " src="img\mente_cerebro.jpg"  alt="...">
+              <img class="testimonio-imagen " src="img\contabilidad.jpg"  alt="...">
               <div class="testimino-info">
-                <p class="cliente">Reflexiones en torno al problema mente-cerebro y persona-naturaleza</p>
+                <p class="cliente">Contabilidad para emprendedores - Instituto de informática de la UNSA</p>
               </div>
             </div>
           </div>
@@ -290,7 +290,7 @@
   <!--Pie de página-->
   <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center" >
     <img class="footer-logo" src="img\logo.svg" alt="">
-    <p class="footer-texto text-center">Aprendiendo cosa nuebas cada día<br>Crezcamos juntos</p>
+    <p class="footer-texto text-center">Aprendiendo cosa nuevas cada día<br>Crezcamos juntos</p>
     <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
       <a href="https://www.linkedin.com/in/jhunior-avila-3a242b24a" target="_blank">
         <i class="bi bi-linkedin"></i>
@@ -299,7 +299,11 @@
         <i class="bi bi-envelope-at-fill"></i>
       </a>
     </div>
-    <div class="derechos-de-autor">Jhunior Avila Quintero (2023) &#169;</div>
+    <div class="derechos-de-autor">Jhunior Avila Quintero (2023) &#169; 
+      <br> Gay el que no me contrate
+      <br> Larga vida al mi Lord K
+      
+      </div>
 
   </footer>
 
