--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <img class="footer-logo" src="img\logo.svg" alt="">
     <p class="footer-texto text-center">Aprendiendo cosa nuevas cada día<br>Crezcamos juntos</p>
     <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-      <a href="https://www.linkedin.com/in/jhunior-avila-3a242b24a" target="_blank">
+      <a href="www.linkedin.com/in/jhunior-avila-quintero-3a242b24a" target="_blank">
         <i class="bi bi-linkedin"></i>
       </a>
       <a href="mailto:jhunior.avila@ucsp.edu.pe" target="_blank">
